--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,129 @@
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
+**/node_modules/
+admin/node_modules/
+server/node_modules/
+project/node_modules/
 /.pnp
 .pnp.js
+package-lock.json
+**/package-lock.json
+yarn.lock
+**/yarn.lock
 
-# testing
+# Testing
 /coverage
+.nyc_output
+junit.xml
 
-# next.js
-/.next/
+# Next.js
+.next/
 /out/
+.next-env.local
 
-# production
+# Production
 /build
+/dist
+*.tsbuildinfo
 
-# misc
-.DS_Store
-*.pem
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
+**/env/
+**/.env
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+**/.env*.local
 
-# debug
+# Project-specific env files
+admin/.env
+admin/.env.local
+admin/.env.development
+admin/.env.production
+admin/.env.test
+
+server/.env
+server/.env.local
+server/.env.development
+server/.env.production
+server/.env.test
+
+project/.env
+project/.env.local
+project/.env.development
+project/.env.production
+project/.env.test
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+debug.log
+.pnpm-debug.log*
 
-# local env files
-.env*.local
-.env
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# IDE
+# IDE and Editors
 .idea/
 .vscode/
-*.swp
-*.swo
+*.sublime-project
+*.sublime-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.project
+.classpath
+.settings/
+*.code-workspace
 
-# SQLite database
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Database
 *.sqlite
 *.sqlite3
 *.db
+*.db-journal
 
 # Logs
 logs
 *.log
+log/
 
-# Cursor rules
+# Cache and temporary files
+.cache/
+.temp/
+.tmp/
+*.tmp
+*.temp
+.eslintcache
+.stylelintcache
+.prettiercache
+
+# Build output
+*.min.js
+*.min.css
+*.map
+
+# Cursor specific
 .cursor/
+
+# Project specific
+public/uploads/
+uploads/
+dist/
+coverage/
+.vercel
