--- a/project/package.json
+++ b/project/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "project-website",
-  "version": "1.0.0",
+  "name": "project",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "next dev -p 3003",
     "build": "next build",
-    "start": "next start -p 3002"
+    "start": "next start -p 3003",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@project-a/shared": "workspace:*",
+    "next": "^14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 } 
