--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,8 @@
-NEXT_PUBLIC_BACKEND_URL=""
 JWT_SECRET=""
-ORIGIN_SITE=""
-CSRF_SECRET=""
+ORIGIN_ADMIN_SITE=""
+ORIGIN_USER_SITE=""
 ACCESS_TOKEN_SECRET=""
 REFRESH_TOKEN_SECRET=""
-CSRF_SECRET=""""
 DEFAULT_ADMIN_USER=""
 DEFAULT_ADMIN_PASS=""
 DEFAULT_TEST_USER=""
