--- a/users/package.json
+++ b/users/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "users",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,4 +14,4 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
-} 
+}
