fix: database initialization and schema bugs, update configs and dependencies

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,9 @@
-JWT_SECRET=""
-ORIGIN_ADMIN_SITE=""
-ORIGIN_USER_SITE=""
-ACCESS_TOKEN_SECRET=""
-REFRESH_TOKEN_SECRET=""
-DEFAULT_ADMIN_USER=""
-DEFAULT_ADMIN_PASS=""
-DEFAULT_TEST_USER=""
-DEFAULT_TEST_PASS=""
+JWT_SECRET="secret"
+ORIGIN_ADMIN_SITE="http://localhost:3002"
+ORIGIN_USER_SITE="http://localhost:3003"
+ACCESS_TOKEN_SECRET="secret"
+REFRESH_TOKEN_SECRET="secret"
+DEFAULT_ADMIN_USER="admin"
+DEFAULT_ADMIN_PASS="admin"
+DEFAULT_TEST_USER="user"
+DEFAULT_TEST_PASS="user"
