--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "project-a",
-  "version": "1.0.0",
-  "private": true,
+  "name": "Capsulemon-main",
+  "packageManager": "yarn@4.9.2",
   "workspaces": [
-    "project",
+    "users",
     "admin",
-    "shared"
+    "shared",
+    "server"
   ]
-} 
+}
